--- a/service/service_msm/src/main/resources/application.properties
+++ b/service/service_msm/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.cloud.nacos.discovery.server-addr=192.168.75.130:8848
 # \u963F\u91CC\u4E91\u7684id\u548C\u5BC6\u94A5
 #aliyun.msm.send.keyid=LTAI4GFmihHNgyfu9TyhAaiL
 #aliyun.msm.send.keysecret=h2GUIQcZeei4VdlRRjn82WyX74KVKh
-aliyun.msm.send.keyid=LTAI4GAS6zW5Gh6amLaHJBLT
-aliyun.msm.send.keysecret=A0ZKeYdnQw0eWE1hR7BLmq0SOR5OMA
-aliyun.msm.send.regionid=default
+aliyun.msm.send.keyid=****
+aliyun.msm.send.keysecret=****
+aliyun.msm.send.regionid=****
 
 # mysql\u6570\u636E\u5E93\u8FDE\u63A5
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
