--- a/service/service_oss/src/main/resources/application.properties
+++ b/service/service_oss/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.profiles.active=dev
 # nacos\u670D\u52A1\u5730\u5740
 spring.cloud.nacos.discovery.server-addr=192.168.75.130:8848
 #\u4E0D\u540C\u7684\u670D\u52A1\u5668\uFF0C\u5730\u5740\u4E0D\u540C
-aliyun.oss.file.endpoint=oss-cn-beijing.aliyuncs.com
-aliyun.oss.file.keyid=LTAI4GFmihHNgyfu9TyhAaiL
-aliyun.oss.file.keysecret=h2GUIQcZeei4VdlRRjn82WyX74KVKh
+aliyun.oss.file.endpoint=****
+aliyun.oss.file.keyid=****
+aliyun.oss.file.keysecret=****
 #bucket\u53EF\u4EE5\u5728\u63A7\u5236\u53F0\u521B\u5EFA\uFF0C\u4E5F\u53EF\u4EE5\u4F7F\u7528java\u4EE3\u7801\u521B\u5EFA
 aliyun.oss.file.bucketname=edu-db0903
 
