--- a/service/service_vod/src/main/resources/application.properties
+++ b/service/service_vod/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.application.name=service-vod
 # nacos\u670D\u52A1\u5730\u5740
 spring.cloud.nacos.discovery.server-addr=192.168.75.130:8848
 #\u4E0D\u540C\u7684\u670D\u52A1\u5668\uFF0C\u5730\u5740\u4E0D\u540C
-aliyun.vod.file.keyid=LTAI4GFmihHNgyfu9TyhAaiL
-aliyun.vod.file.keysecret=h2GUIQcZeei4VdlRRjn82WyX74KVKh
+aliyun.vod.file.keyid=****
+aliyun.vod.file.keysecret=****
 # \u6700\u5927\u4E0A\u4F20\u5355\u4E2A\u6587\u4EF6\u5927\u5C0F\uFF1A\u9ED8\u8BA41M
 spring.servlet.multipart.max-file-size=1024MB
 # \u6700\u5927\u7F6E\u603B\u4E0A\u4F20\u7684\u6570\u636E\u5927\u5C0F \uFF1A\u9ED8\u8BA410M
