--- a/service/service_ucenter/src/main/resources/application.properties
+++ b/service/service_ucenter/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # \u670D\u52A1\u7AEF\u53E3
-server.port=8006
+#server.port=8006
+#\u6D4B\u8BD5\u4F7F\u7528
+server.port=8150
 # \u670D\u52A1\u540D
 spring.application.name=service-ucenter
 # nacos\u670D\u52A1\u5730\u5740
@@ -10,17 +12,14 @@ spring.cloud.nacos.discovery.server-addr=192.168.75.130:8848
 aliyun.msm.send.keyid=LTAI4GAS6zW5Gh6amLaHJBLT
 aliyun.msm.send.keysecret=A0ZKeYdnQw0eWE1hR7BLmq0SOR5OMA
 aliyun.msm.send.regionid=default
-
 # mysql\u6570\u636E\u5E93\u8FDE\u63A5
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://192.168.75.130:3306/guli_edu?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=123456
-
 #\u8FD4\u56DEjson\u7684\u5168\u5C40\u65F6\u95F4\u683C\u5F0F
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
-
 #Redis \u7F13\u5B58
 spring.cache.type=redis
 spring.redis.host=192.168.75.130
@@ -34,6 +33,11 @@ spring.redis.lettuce.pool.max-wait=-1
 #\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4(\u8D1F\u6570\u8868\u793A\u6CA1\u9650\u5236)
 spring.redis.lettuce.pool.max-idle=5
 spring.redis.lettuce.pool.min-idle=0
-
+# \u5FAE\u4FE1\u5F00\u653E\u5E73\u53F0 appid
+wx.open.app_id=wxed9954c01bb89b47
+# \u5FAE\u4FE1\u5F00\u653E\u5E73\u53F0 appsecret
+wx.open.app_secret=a7482517235173ddb4083788de60b90e
+# \u5FAE\u4FE1\u5F00\u653E\u5E73\u53F0 \u91CD\u5B9A\u5411url
+wx.open.redirect_url=http://guli.shop/api/ucenter/wx/callback
 #mybatis\u65E5\u5FD7
 #mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
